<resources>
    <string name="app_name">TicTacToe</string>
    <string name="tictactoe">Tic Tac Toe</string>
    <string name="play">Play</string>
    <string name="desc">Description</string>
    <string name="language">Language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="ubicacion">Data location</string>
    <string name="memory">Memory</string>
    <string name="sd">SD Card</string>
    <string name="filename">File name</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="empate">DRAW</string>
    <string name="ganador">%1$s HAS WON</string>
    <string name="turno">TURN OF %1$s</string>
    <string name="btnVolver">BACK</string>
    <string name="btnReiniciar">RESET</string>
    <string name="trampas">DONT CHEAT!</string>
    <string name="errorFichSD">There is a problem saving game in SD</string>
    <string name="errorFichTelf">There is a problem saving game in memory</string>
    <string name="nombreJugador1">PLAYER 1 - Choose name and color:</string>
    <string name="nombreJugador2">PLAYER 2 - Choose name and color:</string>
    <string name="nombre">Name:</string>
    <string name="naranja">ORANGE</string>
    <string name="verde">GREEN</string>
    <string name="azul">BLUE</string>
    <string name="wipe">WIPE LIST</string>
    <string name="nombresIguales">Names can not be the same</string>
    <string name="nombresVacios">Names have not been entered</string>
    <string name="salir">Exit</string>
    <string name="borrarLista">The result list will be deleted. Are you sure?</string>
    <string name="salirPartida">The data will be lost. Are you sure?</string>
    <string name="salirApp">Do you want to exit?</string>
    <string name="ficheroVacio">The namefile is empty</string>
</resources>
